--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <p>this cat is actually not me</p>
             </article>
             <article>
-                <img id="cat" src=13221539_838322106272144_2463853623005338305_n.jpg>
+                <img id="cat" src=woods.jpg>
                      <p>this cat is actually not me</p>
             </article>
             <article>
