--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <article id="title">
                 <h2 id ="James">James</h2>
                 
-                <img id="big"src=jimmy1.jpg>
+                <img id="bigger"src=jimmy3.jpg>
                 <p>I, am James Bucy. I have been working to become a professional developer, but now, I am a cat. It wasnt always this way. Originally, at this point on this webpage, I was supposed to be telling you more about my career, my life, and who I am. but as you can see, I am most certainly a cat, and this is a full time career, and the end goal at the same time.What more shall I say? will it seem vain of me, as this wonderous creature to speak more of my many feats? </p>
             </article>
             <article>
@@ -39,7 +39,7 @@
                      <p>this cat is actually not me</p>
             </article>
             <article>
-                    <img id="cat"src=http://placekitten.com/g/200/300>
+                    <img id="big"src=jimmy1.jpg>
                      <p>this cat is actually not me</p>
             </article>
         </main>
