--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
             <!-- Katz -->
-            <link href="css/styles.css" type="text/css" rel="stylesheet" />
+            <link href="css/Styles.css" type="text/css" rel="stylesheet" />
         </head>
     <body>
         <header>
