--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                      <p>this cat is actually not me</p>
             </article>
             <article>
-                    <img id="big"src=jimmy3.jpg>
+                    <img id="cat"src=jimmy3.jpg>
                      <p>this cat is actually not me</p>
             </article>
         </main>
