--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             </h1>
         </header>
         <nav>
-            <ul>
+            <ul id="navlist">
                 <li><a href="#James"> James</a></li>
                 <li><a href="#Snapshots in Time">Snapshots in Time</a></li>
                 <li><a href="#Coming and Going">Coming and Going</a></li>
@@ -22,17 +22,17 @@
                 <h2 id ="James">James</h2>
                 <img id="big"src=jimmy1.jpg>
                 
-                <p>I, am James Bucy. I have been working to become a professional developer, but now, I am a cat. It wasnt always this way. Originally, at this point on this webpage, I was supposed to be telling you more about my career, my life, and who I am. but as you can see, I am most certainly a cat, and this is a full time career, and the end goal at the same time.What more shall I say? will it seem vain of me, as this wonderous creature to speak more of my many feats? </p>
+                <p>there are going to be a bunch of words in here, probably talking about me but honestly i dont really know. at one point this whole page was about cats and now look where we are! from cat to coder and back to cat, the life of a coder is a wild one for sure</p>
             </article>
             <article>
                 <h2 id="Snapshots in Time">Snapshots in Time</h2>
-                    <img src=jimmy2.jpg>   
+                    <img id='jim'src=jimmy2.jpg>   
                     <p>I have done some great things.</p>
             </article>
             <article>
                 <h2 id="Coming and Going">Coming and Going</h2>
                 <img id="cat" src=13221539_838322106272144_2463853623005338305_n.jpg> 
-                    <p>this cat is actually not me</p>
+                    <p>this cat is actually not me jjjjjjjjjjjjjjjjjjjjjjjjjjjj jjjjjjjjjjjjjjjjjj jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj ij ojjoidjsjdfgpdjgp' m jf pjf jiofjfijofjidjfiosd jfiod jf jfojofi jofj aso[fjasodjf[asoj fsid jfo[s jf[j sdf[jasdfja[ fjios fjosdjfo[sj f[asjfsdjfi</p>
             </article>
             <article>
                 <img id="cat" src=woods.jpg>
@@ -47,4 +47,5 @@
     <footer>
       
     </footer>
+    <script></script>
 </html>
